solve grid overflow issue

--- a/src/component/ExploreCard.css
+++ b/src/component/ExploreCard.css
@@ -1,3 +1,8 @@
+.exploreCard {
+  width: 100%;
+  height: 100%;
+}
+
 .exploreCard_img {
   object-fit: cover;
   width: 100%;
